2012-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	mktime: check signed shifts on long_int and time_t, too
	* time/mktime.c (SHR): Check that shifts work as desired
	on the types long_int and time_t too, as SHR is used on
	such types.

	mktime: do not assume 'long' is wide enough
	* time/mktime.c (verify): Move decl up.
	(long_int): New type.
	(leapyear, ydhms_diff, guess_time_tm, __mktime_internal): Use it,
	to remove assumption in the code that 'long' is wide enough to
	store year values.  This assumption is not true on x32 and on
	some non-glibc platforms.

	mktime: merge wrapv change from gnulib
	* time/mktime.c (WRAPV): New macro.
	(time_t_avg, time_t_add_ok, time_t_int_add_ok): New static functions.
	(guess_time_tm, __mktime_internal): Do not assume that signed
	integer overflow wraps around; modern compilers generate code
	where this assumption is no longer valid.

2012-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (SYSCALL_ERROR_HANDLER):
	Replace "jmp L(pseudo_end)" with "ret".
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (SYSCALL_ERROR_HANDLER):
	Likewise.

2012-05-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/syscalls.list: Add poll.
	* sysdeps/unix/sysv/linux/poll.c: Remove file.

2012-05-23  Andreas Jaeger  <aj@suse.de>
	    Maximilian Attems  <max@stro.at>

	* sysdeps/unix/sysv/linux/sys/reboot.h (RB_SW_SUSPEND, RB_KEXEC):
	New macros.

2012-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/x32/sched_getcpu.S: Rearrange
	code so that pseudo_end is just ret and the stack pointer is
	correct also for static library in error case.

2012-05-23  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/powerpc/chown.c: Add comment suggesting
	move to syscalls.list.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pwrite.c: Likewise.