@@ -1,5 +1,12 @@
 2012-05-23  Paul Eggert  <eggert@cs.ucla.edu>
 
+	mktime: remove incorrect attempt at unusual arithmetics
+	* time/mktime.c (TYPE_ONES_COMPLEMENT, TYPE_SIGNED_MAGNITUDE): Remove.
+	The code didn't really work on such machines anyway.
+	(TYPE_MINIMUM): Assume two's complement.
+	(twos_complement_arithmetic): Verify that long_int and time_t
+	are two's complement (or unsigned, in the latter case).
+
 	mktime: check signed shifts on long_int and time_t, too
 	* time/mktime.c (SHR): Check that shifts work as desired
 	on the types long_int and time_t too, as SHR is used on
